applications/source-gitlab/gitlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  namespace: source-gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab
        image: sameersbn/gitlab:14.8.2
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        volumeMounts:
        - mountPath: /home/git/data
          name: gitlab-data
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
      restartPolicy: Always
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: cce-evs-gitlab-data
