applications/source-gitlab/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis-service
  namespace: source-gitlab 
spec:
  clusterIP: None
  selector:
    app: redis-service
  sessionAffinity: None
  type: ClusterIP
